--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^3.6.2",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^7.0.2",
     "graphql": "^16.3.0",
-    "apollo-server-express": "^3.6.2"
-
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^7.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
